--- a/Problems/prob032/references/references.bib
+++ b/Problems/prob032/references/references.bib
@@ -40,4 +40,13 @@
   volume    = {41},
 }
 
-
+@Article{chu2012closed,
+  author = 	 {G. Chu and P.J. Stuckey},
+  title = 	 {A complete solution to the Maximum Density Still Life Problem},
+  journal = 	 {Artificial Intelligence},
+  year = 	 {2012},
+  volume = 	 {184--185},
+  pages = 	 {1--16},
+  publisher = {Elsevier},
+  url = {http://dx.doi.org/10.1016/j.artint.2012.02.001},
+}
